--- a/coldfront/components/site/templates/allocation/allocation_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_detail.html
@@ -82,7 +82,7 @@ Allocation Detail
     {% endif %}
   </div>
   <div class="card-footer">
-    {% if allocation.expires_in <= ALLOCATION_DAYS_TO_REVIEW_BEFORE_EXPIRING and allocation.expires_in >= 0 allocation.status.name == 'Active' %}
+    {% if allocation.expires_in <= ALLOCATION_DAYS_TO_REVIEW_BEFORE_EXPIRING and allocation.expires_in >= 0 and allocation.status.name == 'Active' %}
     <div class="text-warning d-inline">
       <strong>
         <i class="far fa-clock" aria-hidden="true"></i>
