Do not open a new tab

--- a/coldfront/components/site/templates/portal/authorized_home.html
+++ b/coldfront/components/site/templates/portal/authorized_home.html
@@ -177,7 +177,7 @@
             <div class="container">
               <div class="row">
                 <div class="col px-0">
-                  <strong>Project:</strong> <a href="{% url 'project-detail' info.project_pk %}" target="_blank">{{ info.project_title|truncatechars:50 }}</a>
+                  <strong>Project:</strong> <a href="{% url 'project-detail' info.project_pk %}">{{ info.project_title|truncatechars:50 }}</a>
                 </div>
                 <div class="col px-0">
                   <p><strong>Account Name:</strong> {{ slurm_account }}</p>
@@ -187,7 +187,7 @@
             <p>
               <strong>Resources:</strong>
               {% for allocation_pk, resource_name in info.allocations.items %}
-                <a href="{% url 'allocation-detail' allocation_pk %}" target="_blank">{{ resource_name }}</a>{% if not forloop.last %},{% endif %}
+                <a href="{% url 'allocation-detail' allocation_pk %}">{{ resource_name }}</a>{% if not forloop.last %},{% endif %}
               {% endfor %}
             </p>
             <p><strong>Add to Interactive Job Commands:</strong> srun -A {{ slurm_account }} &lt;commands&gt;</p>
