--- a/coldfront/components/site/templates/allocation/allocation_allocationattribute_update.html
+++ b/coldfront/components/site/templates/allocation/allocation_allocationattribute_update.html
@@ -3,11 +3,11 @@
 {% load static %}
 
 {% block title %}
-Update Allocation Attributes in Allocation
+Edit Allocation Attribute
 {% endblock %}
 
 {% block content %}
-<h2>Update allocation attributes in allocation for project: {{allocation.project.title}}</h2>
+<h2>Edit allocation attributes in allocation for project: {{allocation.project.title}}</h2>
 <hr>
 
 {% if formset %}
