--- a/coldfront/components/site/templates/allocation/allocation_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_detail.html
@@ -270,7 +270,7 @@ Allocation Detail
             <i class="fas fa-plus" aria-hidden="true"></i> Add Allocation Attribute
           </a>
           <a class="btn btn-primary" href="{% url 'allocation-attribute-edit' allocation.pk %}" role="button">
-            <i class="fas fa-edit" aria-hidden="true"></i> Update Allocation Attributes
+            <i class="fas fa-edit" aria-hidden="true"></i> Edit Allocation Attributes
           </a>
           <a class="btn btn-danger" href="{% url 'allocation-attribute-delete' allocation.pk %}" role="button">
             <i class="fas fa-minus" aria-hidden="true"></i> Delete Allocation Attributes
