--- a/coldfront/components/site/templates/portal/authorized_home.html
+++ b/coldfront/components/site/templates/portal/authorized_home.html
@@ -191,7 +191,7 @@
               {% endfor %}
             </p>
             <p><strong>Add to Interactive Job Commands:</strong> srun -A {{ slurm_account }} &lt;commands&gt;</p>
-            <p><strong>Add to Batch Job Scripts:</strong> #SBATCH -A {{ slurm_accounte }}</p>
+            <p><strong>Add to Batch Job Scripts:</strong> #SBATCH -A {{ slurm_account }}</p>
           </li>
         {% endfor %}
       </ul>
