Change REALLMs to REALLMS

--- a/coldfront/components/site/templates/allocation/allocation_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_detail.html
@@ -221,7 +221,7 @@ Allocation Detail
   </div>
 </div>
 
-{% if allocation.get_parent_resource.name == 'REALLMs API' %}
+{% if allocation.get_parent_resource.name == 'REALLMS API' %}
   {% include "service/reallms_api/reallms_api_key_div.html" %}
 {% endif %}
 
